--- a/anime-detail.html
+++ b/anime-detail.html
@@ -273,7 +273,7 @@
       3: {
         title: "¡KonoSuba! ¡Una bendición para este maravilloso mundo!",
         desc: "Kazuma Satou es un chico de preparatoria otaku y hikikomori que no suele salir de casa, pero cuando lo hace, un fatídico (y ridículo) accidente acaba con su vida. En el otro mundo aparece una diosa ante él y le propone comenzar de nuevo su vida en un mundo de magia y espada, pero las condiciones son un tanto peculiares, así que acabará comenzando de cero como aventurero y acompañado de una diosa.",
-        cover: "https://www.dropbox.com/scl/fi/973zjlsi4a03w1hde7ivd/DrPytSFXgAYg1Z_-1.jpg?rlkey=wr2btn7cf7wp9yyt7id7uy9uy&st=gxhbfwyq&raw=1",
+        cover: "konosaubaportada.jpg",
         seasons: [
           {
             num: 1,
@@ -910,10 +910,10 @@
           },
           {
             num: 2,
-	    name: "Película 1",
+	    name: "Película: El Tren Infinito",
             cover: "https://www.dropbox.com/scl/fi/2gpxn6o5gz54vbn3u2u7z/Demon-Slayer-Pelicula-1.jpg?rlkey=8qn7pm6o3jfeq0lnjaj1xv9rk&st=x62180e8&raw=1",
             eps: [
-              { title: "Demon Slayer Película 1: El Tren Infinito"},
+              { title: "Demon Slayer Película: El Tren Infinito"},
             ]
           },
           {
@@ -936,14 +936,6 @@
           },
           {
             num: 4,
-	    name: "Película 2",
-            cover: "https://www.dropbox.com/scl/fi/szhj1hl8i7vqfw6fzpwsn/Demon-Slayer-Pelicula-2.jpg?rlkey=z2126pfg5ize3ux6lf2mr19tf&st=f8hzvj9l&raw=1",
-            eps: [
-              { title: "Demon Slayer Película 2: To the Swordsmith Village"},
-            ]
-          },
-          {
-            num: 5,
 	    name: "Temporada 3",
             cover: "https://www.dropbox.com/scl/fi/2bh2sfcsj8g79qyxybp5h/Demon-Slayer-T3.jpg?rlkey=f2dg28acvd30m0grwbemzwkoc&st=ir9k5y6a&raw=1",
             eps: [
@@ -961,17 +953,9 @@
             ]
           },
           {
-            num: 6,
-	    name: "Película 3",
-            cover: "https://www.dropbox.com/scl/fi/ojq9woi8mm516pvpn73mn/Demon-Slayer-Pelicula-3.jpg?rlkey=jtd9xw1i3pyttoev0o9cdhkq3&st=c706zo9r&raw=1",
-            eps: [
-              { title: "Demon Slayer Película 3: To the Hashira Training"},
-            ]
-          },
-          {
-            num: 7,
+            num: 5,
 	    name: "Temporada 4",
-            cover: "https://www.dropbox.com/scl/fi/v9pxrs1jj8oc7wkavpnwo/Demon-Slayer-T4.jpg?rlkey=az1ppw4k6t1n9abhm6n7wbpog&st=cgalfnem&raw=1",
+            cover: "https://www.dropbox.com/scl/fi/ojq9woi8mm516pvpn73mn/Demon-Slayer-Pelicula-3.jpg?rlkey=jtd9xw1i3pyttoev0o9cdhkq3&st=c706zo9r&raw=1",
             eps: [
               { title: "Demon Slayer T4 Cap 1"},
               { title: "Demon Slayer T4 Cap 2"},
@@ -981,17 +965,14 @@
               { title: "Demon Slayer T4 Cap 6"},
               { title: "Demon Slayer T4 Cap 7"},
               { title: "Demon Slayer T4 Cap 8"},
-              { title: "Demon Slayer T4 Cap 9"},
-              { title: "Demon Slayer T4 Cap 10"},
-              { title: "Demon Slayer T4 Cap 11"},
             ]
           },
           {
-            num: 8,
-	    name: "Película 4",
+            num: 6,
+	    name: "Película: Castillo Infinito",
             cover: "https://www.dropbox.com/scl/fi/ollpfsqskuvar6fg3zdza/Demon-Slayer-Pelicula-4.jpg?rlkey=trkr1eux9hwkpa1ryi7t3oxf8&st=0twpq5s7&raw=1",
             eps: [
-              { title: "Demon Slayer Película 4: Castillo Infinito"},
+              { title: "Demon Slayer Película: Castillo Infinito (GRABADO EN CINES) (SUB)"},
             ]
           }
         ]
@@ -999,7 +980,7 @@
       11: {
         title: "Maou 2099",
         desc: "Hace cinco siglos, el Señor Demonio Veltol reinaba sobre una nación inmortal. Ahora, ha llegado su momento de despertar. Corre el año 2099 y la civilización ha alcanzado su máximo desarrollo, dando lugar a un paisaje de alta tecnología con imponentes rascacielos, algo nunca antes conquistado. Veltol puede ser una reliquia del pasado, pero no se equivoquen: ¡este nuevo mundo estará a su disposición!",
-        cover: "https://www.dropbox.com/scl/fi/su8i4y0cynftlnzlldfhj/maou2099-1.jpg?rlkey=4yg0msepo25lpn80kxg9ni3um&st=vdhrcc8y&raw=1",
+        cover: "maou2099portada.jpg",
         seasons: [
           {
             num: 1,
@@ -1222,7 +1203,7 @@
       19: {
         title: "The Rising of the Shield Hero",
         desc: "Iwatani Naofumi es el típico otaku, al menos hasta que un día encuentra en la biblioteca un libro que lo transporta a otro mundo. Allí se convertirá en el Héroe del Escudo, uno de los Cuatro Héroes Cardinales, y tendrá que luchar contra las Olas de la Catástrofe junto a los héroes de la espada, la lanza y el arco. Emocionado ante la perspectiva de vivir una gran aventura, Naofumi parte de viaje con su grupo. No obstante, al cabo de unos pocos días lo traicionan y pierde su dinero, su dignidad y el respeto de los que le rodean.",
-        cover: "https://www.dropbox.com/scl/fi/qriw9hu1jsc46jh75xsgw/FqaFeK9XoAMW7_lg-1-1.jpg?rlkey=5516wyvugdk4y8kpflr49y5cr&st=l2eeaajv&raw=1",
+        cover: "heroedelescudoportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1361,7 +1342,7 @@
       22: {
         title: "Goblin Slayer",
         desc: "Una joven sacerdotisa ha formado su primer grupo de aventureros, pero no tardan mucho en verse en serios problemas. Por suerte, quien aparece en su rescate es el Asesino de Goblins, un hombre que ha dedicado su vida a exterminar a todo goblin viviente por los medios que fueran necesarios. Cuando comienzan a circular rumores sobre sus hazañas, no hay forma de saber quién será el próximo en aparecer…",
-        cover: "https://www.dropbox.com/scl/fi/ltdh8xylehw9b4p1gql9l/goblins-1-1.jpg?rlkey=glkiwc6kmlxkyt2htyxvawjaf&st=f4aqlj2g&raw=1",
+        cover: "goblinslayerportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1472,7 +1453,7 @@
       25: {
         title: "Kaiju No. 8",
         desc: "La historia la protagoniza Kafka Hibino, un hombre de 32 años que quiere unirse a la Fuerza de Defensa y cumplir la promesa que le hizo a una amiga de la infancia, Mina Ashiro. En su trabajo como limpiador de restos de Kaiju forja amistad con un nuevo compañero, Reno Ichikawa, cuya determinación de unirse a la Fuerza de Defensa inspira a Kafka a cumplir su promesa de la infancia de unirse a Mina para proteger a la humanidad. Cuando un pequeño Kaiju se introduce en el interior de Kafka, éste adquiere una fuerza sobrehumana y poderes que le permiten luchar contra los Kaiju. Ahora se esfuerza por ganarse la confianza de sus compañeros humanos, derrotar a unos Kaiju cada vez más poderosos y proteger el mundo.",
-        cover: "https://www.dropbox.com/scl/fi/ay1uv6tunghtxgty33kor/easgsdagsgd-1.jpg?rlkey=4o7rpeem4b4q1j3bvb5658qmr&st=dvv92bay&raw=1",
+        cover: "kaijuportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1524,7 +1505,7 @@
       26: {
         title: "Zootopia",
         desc: "La metrópoli Zootopía es una ciudad de mamíferos, donde muchos animales viven y se desarrollan. Allí, la optimista agente Judy Hopps se convierte en la primera conejita de un cuerpo policial compuesto por animales duros y enormes. Judy está decidida a demostrar su valentía y se mete en un caso con Nick Wilde, un zorro parlanchín y estafador.",
-        cover: "https://www.dropbox.com/scl/fi/fqx51rdmzpzey4l5dswwv/zootopia.jpg?rlkey=52hnhfwz3pxr74564l5nzd6il&st=ndqtsgnw&raw=1",
+        cover: "zootopiaportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1547,7 +1528,7 @@
       27: {
         title: "Clevatess -Majuu no Ou to Akago",
         desc: "Uno de los Señores de las Bestias Oscuras, el reinado de Clevatess se hace trizas cuando revive a un héroe al que él mismo mató y adopta a un bebé humanoide huérfano, la última esperanza para salvar un mundo moribundo. Ahora unidos por el destino, ¿qué les deparará a este trío tan improbable?",
-        cover: "https://www.dropbox.com/scl/fi/znhu04opb4czg3o0m7dam/Clevatess-Majuu-no-Ou-to-Akago.jpg?rlkey=rsbqms1bnsx4nc80dgb6yme6k&st=jgwobm6m&raw=1",
+        cover: "Clevatessportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1572,7 +1553,7 @@
       28: {
         title: "Dr. Stone",
         desc: "Senku es un joven extremadamente inteligente con un gran don para la ciencia y una ácida personalidad, y su mejor amigo es Taiju, que es muy buena persona pero más apto para usar los músculos que para pensar. Cuando tras cierto incidente toda la humanidad acaba convertida en piedra, ellos logran despertarse en un mundo miles de años después, con la civilización humana completamente desaparecida y con toda la humanidad congelada en piedra como ellos estuvieron. Ahora es su obligación rescatar a la gente y crear un nuevo mundo.",
-        cover: "https://www.dropbox.com/scl/fi/2z36rgoagk82dw2cb0lql/Dr._Stone_29_.jpg?rlkey=mqb5z6o7hj41ricpm6fnsm8hy&st=07zw9h0j&raw=1",
+        cover: "Dr._Stoneportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1694,7 +1675,7 @@
       29: {
         title: "One Piece (Live Action)",
         desc: "Acompañado de su ecléctica tripulación, el joven pirata Monkey D. Luffy emprende un viaje en busca de un tesoro legendario en esta adaptación del popular manga.",
-        cover: "https://www.dropbox.com/scl/fi/50vo69ws4i64qv4kxibs7/oneeee.jpg?rlkey=ok8a8nt6bh8g0rzzpqisptfoe&st=psff3vov&raw=1",
+        cover: "onepieceportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1729,7 +1710,7 @@
       30: {
         title: "Shoujo Ramune",
         desc: "Ha sido unos meses desde Kiyoshi renunció a su trabajo para cumplir su sueño de tener un dagashis-ya en las afueras de Tokio. Él quería vivir el resto de su vida viendo niñas. Su plan fue un éxito, con las niñas de la escuela cercana que visitan su tienda todos los días y hablaban con él felizmente como amigos. Sin embargo, poco después que las vacaciones de verano comenzaran, se dio cuenta que una de sus clientes habituales, Chie, robaba algunos dulces. A pesar de que no había mucha pérdida, no podía dejar que se saliera con la suya. Cuando se le preguntó, ella dijo que le iba a compensar por ello mediante el trabajo a tiempo parcial en su tienda. Así comienza sus vacaciones de verano con pequeñas niñas.",
-        cover: "shoujo.jpg",
+        cover: "shoujoramuneportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1747,7 +1728,7 @@
       31: {
         title: "To Your Eternity",
         desc: "Ha sido unos meses desde Kiyoshi renunció a su trabajo para cumplir su sueño de tener un dagashis-ya en las afueras de Tokio. Él quería vivir el resto de su vida viendo niñas. Su plan fue un éxito, con las niñas de la escuela cercana que visitan su tienda todos los días y hablaban con él felizmente como amigos. Sin embargo, poco después que las vacaciones de verano comenzaran, se dio cuenta que una de sus clientes habituales, Chie, robaba algunos dulces. A pesar de que no había mucha pérdida, no podía dejar que se saliera con la suya. Cuando se le preguntó, ella dijo que le iba a compensar por ello mediante el trabajo a tiempo parcial en su tienda. Así comienza sus vacaciones de verano con pequeñas niñas.",
-        cover: "https://www.dropbox.com/scl/fi/du5sn8bt3ie6l4odbsjo6/fumetsu-1.jpg?rlkey=jx3a1v76k20ki639pmwe9v9b3&st=rawxrnvg&raw=1",
+        cover: "fumetsuportada.jpg",
         seasons: [
           {
             num: 1,
@@ -1813,7 +1794,7 @@
       32: {
         title: "Tsugunai Subbed",
         desc: "Nuestro mc vive con su hermana, Nana, después de que sus padres murieran en un accidente. Crecieron compartiendo momentos tristes y felices juntos. Pero un día, Nana tuvo que pasar por una vida terrible, fue asaltada por un grupo de hombres ricos y quedó extremadamente traumatizada. Quería vengarse de esos sucios hombres ricos. Mc se convierte en profesor de secundaria donde estudia la hija de los ricos. Después de retomar el momento, los invitó a una villa remota para recibir clases complementarias. Cerró la puerta para asegurarse de que ninguno de ellos escapara y se vengara por primera vez de la chica llamada Ruriko, que tenía el mayor respeto por su asqueroso padre que agredió a la hermana de mc. El resto de la chica trató de huir, pero ¿serán capaces de escapar de la ira de mc?",
-        cover: "https://www.dropbox.com/scl/fi/hkyj8asfbi0lw4kyuzjvk/71Bk-zdlprL-1.jpg?rlkey=g875hho1bd55nyaqo4p2hh9ek&st=f0h9rkpl&raw=1",
+        cover: "Tsugunai Subbed portada.jpg",
         seasons: [
           {
             num: 1,
@@ -1830,7 +1811,7 @@
       37: {
         title: "Shinsei Kourin Dacryon Luna",
         desc: "En el club de periodismo de la Escuela Privada Etoile, Runa, Reina y Miyu activan la aplicación Angel Maker, lo que desencadena una tragedia. Se convierten en chicas mágicas y luchan contra monstruos deformes, pero un día son capturadas y violadas por ellos. Erika, la chica mágica, las rescata, pero les advierte que si siguen luchando atraerán más ataques. Resulta que la aplicación ha sido maldecida por ángeles caídos. Erika lucha contra ellos, pero su corazón se corrompe.",
-        cover: "https://www.dropbox.com/scl/fi/f3ada5jvt69z0si1f82eo/portadah.jpg?rlkey=l6y1gyidiucos6j2g1gjyp7k3&st=82m33282&raw=1",
+        cover: "Shinsei Kourin Dacryon Luna portada.jpg",
         seasons: [
           {
             num: 1,
