--- a/index.html
+++ b/index.html
@@ -417,15 +417,15 @@
     const animes = [
       {id:1, title:"DAN DA DAN", img:"dan.jpg", rating:4.9, genres:["Acción","Shōnen","Sobrenatural","Comedia","Romance","Comedia oscura"]},
       {id:2, title:"Jujutsu Kaisen", img:"Jujutsu.jpg", rating:4.9, genres:["Shōnen","Sobrenatural","Fantasía oscura","Acción","Nekketsu"]},
-      {id:3, title:"Konosuba", img:"https://www.dropbox.com/scl/fi/973zjlsi4a03w1hde7ivd/DrPytSFXgAYg1Z_-1.jpg?rlkey=wr2btn7cf7wp9yyt7id7uy9uy&st=gxhbfwyq&raw=1", rating:4.8, genres:["Aventura","Comedia","Fantasía","Sobrenatural","Isekai","Ecchi","Shōnen"]},
+      {id:3, title:"Konosuba", img:"konosubaportada.jpg", rating:4.8, genres:["Aventura","Comedia","Fantasía","Sobrenatural","Isekai","Ecchi","Shōnen"]},
       {id:4, title:"Re:Zero − Empezar vida en otro mundo", img:"rezero.png", rating:4.8, genres:["Acción","Aventura","Drama","Fantasía oscura","Romance","Thriller psicológico","Terror psicológico","Isekai","Shōnen"]},
       {id:5, title:"Mushoku Tensei", img:"mushoku.jpg", rating:4.8, genres:["Isekai","Ecchi","Romance","Harem","Acción","Aventura","Drama","Fantasía","Seinen"]},
       {id:6, title:"Tensei Shitara Slime Datta Ken", aliases: ["That Time I Got Reincarnated as a Slime"], img:"slime.jpg", rating:4.9, genres:["Comedia","Isekai","Acción","Aventura","Fantasía"]},
       {id:7, title:"Saga of Tanya the Evil", aliases: ["Yōjo Senki"], img:"tanya1.jpg", rating:4.8, genres:["Acción","Aventura","Fantasía","Militar","Drama","Ciencia ficción","Seinen"]},
       {id:8, title:"Akame Ga Kill", aliases: ["Akame ga Kiru"], img:"Akame1.jpg", rating:4.6, genres:["Acción","Aventura","Drama","Fantasía oscura","Shōnen","Romance","Tragedia"]},
       {id:9, title:"To Be Hero X", img:"hero11.jpg", rating:4.8, genres:["Acción","Comedia","Animación","Fantasía","Superhéroes","Seinen"]},
-      {id:10, title:"Demon Slayer", aliases: ["Kimetsu no Yaiba"], img:"demon.jpg", rating:4.9, genres:["Acción","Fantasía oscura","Aventura","Shōnen","Sobrenatural","Comedia","Drama"]},
-      {id:11, title:"Maou 2099", img:"https://www.dropbox.com/scl/fi/su8i4y0cynftlnzlldfhj/maou2099-1.jpg?rlkey=4yg0msepo25lpn80kxg9ni3um&st=vdhrcc8y&raw=1", rating:4.7, genres:["Ciencia ficción","Isekai Inverso","Acción","Fantasía","Cyberpunk"]},
+      {id:10, title:"Demon Slayer", aliases: ["Kimetsu no Yaiba"], img:"demon.jpg", rating:4.9, genres:["Acción","Fantasía oscura","Aventura","Shōnen","Sobrenatural","Drama"]},
+      {id:11, title:"Maou 2099", img:"maou2099portada.jpg", rating:4.7, genres:["Ciencia ficción","Isekai Inverso","Acción","Fantasía","Cyberpunk"]},
       {id:12, title:"Wistoria: Wand and Sword", img:"wistoria.jpg", rating:4.8, genres:["Fantasía","Aventura","Shōnen"]},
       {id:13, title:"Izure Saikyou no Renkinjutsushi", aliases: ["Possibly the Greatest Alchemist of All Time"], img:"Izure.jpg", rating:4.6, genres:["Aventura","Comedia","Fantasía","Isekai","Shōnen"]},
       {id:14, title:"Alya Sometimes Hides Her Feelings in Russian", aliases: ["Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san"], img:"alia.jpg", rating:4.8, genres:["Comedia","Romance","Romance escolar","Escolar","Josei"]},
@@ -433,21 +433,21 @@
       {id:16, title:"kimi to boku no saigo no senjou", aliases: ["Our Last Crusade or the Rise of a New World"], img:"kimi22222.jpg", rating:4.5, genres:["Acción","Fantasía","Romance","Militar","Seinen"]},
       {id:17, title:"The Gorilla God's Go- To Girl", aliases: ["Gorilla no Kami Kara Kago Sareta Reijō wa Ōritsu Kishidan de Kawaiigareru"], img:"gorila11.jpg", rating:4.5, genres:["Fantasía","Comedia","Escolar","Romance","Shōjo"]},
       {id:18, title:"Chainsaw Man", img:"chaiw11.jpg", rating:4.9, genres:["Fantasía oscura","Acción","Shōnen","Comedia oscura"]},
-      {id:19, title:"The Rising of the Shield Hero", aliases: ["Tate no Yuusha no Nariagari","El Héroe del Escudo"], img:"https://www.dropbox.com/scl/fi/qriw9hu1jsc46jh75xsgw/FqaFeK9XoAMW7_lg-1-1.jpg?rlkey=5516wyvugdk4y8kpflr49y5cr&st=2mq5x24h&raw=1", rating:4.7, genres:["Aventura","Drama","Fantasía","Acción","Seinen","Romance","Isekai"]},
+      {id:19, title:"The Rising of the Shield Hero", aliases: ["Tate no Yuusha no Nariagari","El Héroe del Escudo"], img:"heroedelescudoportada.jpg", rating:4.7, genres:["Aventura","Drama","Fantasía","Acción","Seinen","Romance","Isekai"]},
       {id:20, title:"Overflow", img:"overflow.jpg", rating:4.6, genres:["Hentai","Escolar","Romance","Harem","Incesto"]},
       {id:21, title:"Shiunji-ke no Kodomotachi", img:"Shiux.jpg", rating:4.6, genres:["Comedia","Romance","Drama","Harem","Slice of Life","Seinen"]},
-      {id:22, title:"Goblin Slayer", img:"https://www.dropbox.com/scl/fi/ltdh8xylehw9b4p1gql9l/goblins-1-1.jpg?rlkey=glkiwc6kmlxkyt2htyxvawjaf&st=f4aqlj2g&raw=1", rating:4.7, genres:["Seinen","Fantasía oscura","Horror","Aventura","Fantasía"]},
+      {id:22, title:"Goblin Slayer", img:"goblinslayerportada.jpg", rating:4.7, genres:["Seinen","Fantasía oscura","Horror","Aventura","Fantasía"]},
       {id:23, title:"Kanchigai no Atelier Meister", img:"atelier1.jpg", rating:4.6, genres:["Aventura","Comedia","Fantasía","Acción","Shōnen"]},
       {id:24, title:"Definitivamente. ¡No me gusta mi hermano para nada!", img:"Oni.jpg", rating:4.1, genres:["Seinen","Comedia","Romance","Slice of Life","Harem","Ecchi"]},
-      {id:25, title:"Kaiju No. 8", img:"https://www.dropbox.com/scl/fi/ay1uv6tunghtxgty33kor/easgsdagsgd-1.jpg?rlkey=4o7rpeem4b4q1j3bvb5658qmr&st=dvv92bay&raw=1", rating:4.9, genres:["Shōnen","Sobrenatural","Fantasía oscura","Acción","Ciencia ficción","Aventura","Comedia","Kaiju"]},
-      {id:26, title:"Zootopia", img:"https://www.dropbox.com/scl/fi/fqx51rdmzpzey4l5dswwv/zootopia.jpg?rlkey=52hnhfwz3pxr74564l5nzd6il&st=hiby8o0e&raw=1", rating:4.7, genres:["Aventura","Comedia","Crimen","Infantil","Familiar","Misterio","Animación","Dibujo Animado"]},
-      {id:27, title:"Clevatess -Majuu no Ou to Akago", img:"https://www.dropbox.com/scl/fi/znhu04opb4czg3o0m7dam/Clevatess-Majuu-no-Ou-to-Akago.jpg?rlkey=rsbqms1bnsx4nc80dgb6yme6k&st=y9r1feiz&raw=1", rating:4.8, genres:["Acción","Fantasía","Drama"]},
-      {id:28, title:"Dr. Stone", img:"https://www.dropbox.com/scl/fi/2z36rgoagk82dw2cb0lql/Dr._Stone_29_.jpg?rlkey=mqb5z6o7hj41ricpm6fnsm8hy&st=dh105dpx&raw=1", rating:4.8, genres:["Ciencia ficción","Aventura","Comedia","Shōnen","Post-apocalíptico"]},
-      {id:29, title:"One Piece (Live Action)", img:"https://www.dropbox.com/scl/fi/50vo69ws4i64qv4kxibs7/oneeee.jpg?rlkey=ok8a8nt6bh8g0rzzpqisptfoe&st=psff3vov&raw=1", rating:4.8, genres:["Aventura","Comedia","Acción","Fantasía","Drama"]},
-      {id:30, title:"Shoujo Ramune", img:"https://www.dropbox.com/scl/fi/ok7pcimnqtue7gg30i70x/shoujo.jpg?rlkey=sl1bn5cj5bmxu003jq2q6906d&st=fd15ap5n&raw=1", rating:4.3, genres:["Hentai","Harem","Incesto"]},
-      {id:31, title:"To Your Eternity", aliases: ["Fumetsu no Anata e"], img:"https://www.dropbox.com/scl/fi/du5sn8bt3ie6l4odbsjo6/fumetsu-1.jpg?rlkey=jx3a1v76k20ki639pmwe9v9b3&st=rawxrnvg&raw=1", rating:4.8, genres:["Fantasía","Drama","Aventura","Shōnen","Sobrenatural"]},
-      {id:32, title:"Tsugunai Subbed", img:"https://www.dropbox.com/scl/fi/hkyj8asfbi0lw4kyuzjvk/71Bk-zdlprL-1.jpg?rlkey=g875hho1bd55nyaqo4p2hh9ek&st=gahfap3z&raw=1", rating:4.8, genres:["Hentai","Harem","Escolar"]},
-      {id:37, title:"Shinsei Kourin Dacryon Luna", img:"https://www.dropbox.com/scl/fi/f3ada5jvt69z0si1f82eo/portadah.jpg?rlkey=l6y1gyidiucos6j2g1gjyp7k3&st=82m33282&raw=1", rating:4.0, genres:["Tentáculos","Hentai","Fantasía","Seinen","Fantasía oscura"]},
+      {id:25, title:"Kaiju No. 8", img:"kaijuportada.jpg", rating:4.9, genres:["Shōnen","Sobrenatural","Fantasía oscura","Acción","Ciencia ficción","Aventura","Comedia","Kaiju"]},
+      {id:26, title:"Zootopia", img:"zootopiaportada.jpg", rating:4.7, genres:["Aventura","Comedia","Crimen","Infantil","Familiar","Misterio","Animación","Dibujo Animado"]},
+      {id:27, title:"Clevatess -Majuu no Ou to Akago", img:"Clevatessportada.jpg", rating:4.8, genres:["Acción","Fantasía","Drama"]},
+      {id:28, title:"Dr. Stone", img:"Dr._Stoneportada.jpg", rating:4.8, genres:["Ciencia ficción","Aventura","Comedia","Shōnen","Post-apocalíptico"]},
+      {id:29, title:"One Piece (Live Action)", img:"onepieceportada.jpg", rating:4.8, genres:["Aventura","Comedia","Acción","Fantasía","Drama"]},
+      {id:30, title:"Shoujo Ramune", img:"shoujoramuneportada.jpg", rating:4.3, genres:["Hentai","Harem","Incesto"]},
+      {id:31, title:"To Your Eternity", aliases: ["Fumetsu no Anata e"], img:"fumetsuportada.jpg", rating:4.8, genres:["Fantasía","Drama","Aventura","Shōnen","Sobrenatural"]},
+      {id:32, title:"Tsugunai Subbed", img:"Tsugunai Subbed portada.jpg", rating:4.8, genres:["Hentai","Harem","Escolar"]},
+      {id:37, title:"Shinsei Kourin Dacryon Luna", img:"Shinsei Kourin Dacryon Luna portada.jpg", rating:4.0, genres:["Tentáculos","Hentai","Fantasía","Seinen","Fantasía oscura"]},
     ];
 
 
